# rust-axum-sea-orm-postgres-boilerplate

./: .env  Cargo.toml  Makefile  docker-compose.yml
migrations/: 20220131051757_init.sql
src/: main.rs  result.rs
src/entity/: events.rs  mod.rs  prelude.rs
src/route/: events.rs
