[package]
name = 'backend'
version = '0.1.0'
edition = '2021'
publish = false

[dependencies]
axum = '0.4'
tracing = '0.1'
serde_json = '1'
thiserror = '1.0.30'

[dependencies.sqlx]
version = '0.5'
features = [
    'runtime-tokio-rustls',
    'postgres',
    'macros',
    'migrate',
    'uuid',
    'chrono',
]

[dependencies.sea-orm]
version = '0.5'
features = [
    'sqlx-postgres',
    'runtime-tokio-rustls',
    'macros',
    'debug-print',
]
default-features = false

[dependencies.tokio]
version = '1.0'
features = ['full']

[dependencies.tracing-subscriber]
version = '0.3'
features = ['env-filter']

[dependencies.tower]
version = '0.4'
features = [
    'util',
    'timeout',
]

[dependencies.tower-http]
version = '0.2.0'
features = [
    'add-extension',
    'trace',
]

[dependencies.uuid]
version = '0.8'
features = [
    'serde',
    'v4',
]

[dependencies.serde]
version = '1.0'
features = ['derive']
